--- a/source/articles/good-strategy-bad-strategy-summary.html.md.erb
+++ b/source/articles/good-strategy-bad-strategy-summary.html.md.erb
@@ -58,7 +58,7 @@ Note: Asking a group to reach a consensus is a bad idea
 ## Good Strategy
 The basic underlying structure of a good strategy is the **kernel**.
 
-The **kernel** consist of three elements:
+The kernel consist of three elements:
 
 1. **Diagnosis** that defines or explains the nature of the challenges. A good diagnosis simplifies the overwhelming complexity of reality by identifying certain aspects of the situation as critical.
 2. **Guiding policy** for dealing with the challenge. This is the overall approach chosen to cope with or overcome the obstacles identified in the diagnosis.
