--- a/source/styles/main.css.scss
+++ b/source/styles/main.css.scss
@@ -64,12 +64,40 @@ article {
     font-size: 1.7rem;
   }
 
+  li {
+    margin-bottom: 5px;
+  }
+
   p {
     margin: 0 0 30px 0;
   }
 
+  p:last-child {
+    margin-bottom: 0;
+  }
+
   ul, ol {
     padding-left: 20px;
+    margin: 0 0 30px 0;
+  }
+
+  ol {
+    list-style-type: none;
+  }
+
+  ol > li {
+    counter-increment: step-counter;
+    margin-bottom: 10px;
+  }
+
+  ol > li::before {
+    content: counter(step-counter);
+    margin-right: 5px;
+    background-color: rgb(200,200,200);
+    color: white;
+    font-weight: bold;
+    padding: 3px 8px;
+    border-radius: 50%;
   }
 
   h1 {
@@ -99,8 +127,18 @@ article {
 
   img {
     max-width: 100%;
-    display: block;
     margin: 30px 0 30px 0;
+    white-space: pre;
+  }
+
+  a.img-link {
+    border-bottom: none;
+    display: table;
+    margin: 30px 0 30px 0;
+  }
+
+  a.img-link img {
+    margin: 0;
   }
 
 }
