--- a/source/articles/21-startup-books-that-changed-the-way-I-think.html.md.erb
+++ b/source/articles/21-startup-books-that-changed-the-way-I-think.html.md.erb
@@ -204,6 +204,14 @@ Before the Design Sprint, prepare by picking the proper team, environment, mater
 
 Price simplifiers and proposition simplifiers
 
+Price-simplifying
+The first we call price-simplifying. This requires cutting the price of a product or service in half, or more. Sometimes, within a few years, prices may be cut by 90 per cent. On the face of it, this might sound unrealistic. Yet we will show you numerous examples of when it has happened. The new – hugely cheaper – product or service is not identical to the old, expensive product, but it fulfils the same basic function. For example, no one would argue that travelling on a budget airline is as pleasant an experience as travelling on a full-service rival, but they still get you from A to B quickly and safely.
+
+Proposition-simplifying
+This involves creating a product that is useful, appealing and very easy to use, such as the iPad, the Google search engine or the Uber app. Proposition-simplified products are also usually aesthetically pleasing. 
+
+Proposition-simplifying creates a large market that did not previously exist in the same form, or at all. Unlike price-simplifying, products that proposition-simplify do not involve a radical reduction in price; they may even command a price premium. 
+
 It's also worth checking out [Michael Porter](https://www.goodreads.com/author/list/57611.Michael_E_Porter), who has a similar framework for developing strategic positioning.
 
 ### [Leadership: The Care and Growth Model - Etsko Schuitema](https://www.amazon.com/Leadership-Growth-Model-Etsko-Schuitema-ebook/dp/B00GUTRAIA)
@@ -224,14 +232,30 @@ The book and it's concepts were introduced to me by one of my friends, Francois 
 
 Why it's so hard for large companies to innovate.
 
+For this reason, the next generation product is not being built for the incumbent's customer set and this large customer set is not interested in the new innovation and keeps demanding more innovation with the incumbent product. Unfortunately this incumbent innovation is limited to the overall value of the product as it is at the later end of the S-curve. Meanwhile, the new entrant is deep into the S-curve and providing significant value to the new product. By the time the new product becomes interesting to the incumbent's customers it is too late for the incumbent to react to the new product. At this point it is too late for the incumbent to keep up with the new entrant's rate of improvement, which by then is on the near-vertical portion of its S-curve trajectory.
 
-### [The Fountainhead - Ayn Rand](https://www.amazon.com/Fountainhead-Ayn-Rand/dp/0452273331)
+### [Atlas Shrugged - Ayn Rand](https://www.amazon.com/Atlas-Shrugged-Ayn-Rand/dp/0451191145)
 
-<% link_to "https://www.amazon.com/Fountainhead-Ayn-Rand/dp/0452273331", :class => 'img-link' do %>
-    <%= image_tag "21-startup-books-that-changed-the-way-i-think/the-fountainhead.jpg" %>
+<% link_to "https://www.amazon.com/Atlas-Shrugged-Ayn-Rand/dp/0451191145", :class => 'img-link' do %>
+    <%= image_tag "21-startup-books-that-changed-the-way-i-think/atlas-shrugged.jpg" %>
 <% end %>
 
-This book is massive. It's also worth reading [Atlas Shrugged](https://www.amazon.com/Atlas-Shrugged-Ayn-Rand/dp/0451191145), although I think it's a harder read than The Fountainhead.
+Ayn Rand was Russian-American writer. Atlas Shrugged 
+
+The book is 1000+ pages, so prepare yourself for a long read. 
+
+libertarian concepts
+
+The book left me feeling that human potential is unlimited. Atlas Shrugged is a brilliant exposition of the things that are made possible by the rational, thinking human mind. 
+
+The counter-intuitive thing about that potential though is that 
+A lot of things that we take for granted are the product of free markets harnessing the power of free minds. 
+
+We see what happens throughout the book when people are unshackled and allowed to pursue their own goals. Production increases. Lives are saved. Life is meaningful.
+
+The second reason is its exploration of how a society disintegrates when we deny human nature. The great tragedy I see throughout Atlas is the tragedy of what might have been. The producers are destroyed, and their destroyers continue to be oblivious to their destruction. 
+
+**Sidenote:** One of the most important principles in economics is that we rarely if ever take account of the unseen, unintended consequences of policies and actions. If you're interested in a real-world perspective on this phenomenon take a look at [Discrimination and Disparities](https://www.amazon.com/Discrimination-Disparities-Thomas-Sowell/dp/154164560X) by Thomas Sowell.
 
 ### [Four Steps to the Epiphany - Steve Blank](https://www.amazon.com/Four-Steps-Epiphany-Steve-Blank/dp/0989200507)
 
@@ -240,7 +264,6 @@ This book is massive. It's also worth reading [Atlas Shrugged](https://www.amazo
 <% end %>
 
 These first two steps validate the assumptions in your business model, that a market exists for your product, who your customers will be, the target buyers, establishes pricing, sales process and channels strategy.
-
 
 1. **Customer Discovery** is about finding out if there are customers for your idea and if and what they would be willing to pay for it, before you write a line of code. "Get out of the building"
 2. **Customer Validation** creates a repeatable sales and marketing road-map based on the lessons learned in selling (not giving it away) to the first early customers. 
